# setup-environment-francoriba

./: .gitignore  CMakeLists.txt  sonar-project.properties
.github/actions/coverage_and_test/: action.yml
.github/actions/documentation/: action.yml
.github/actions/style/: action.yml
docs/: Doxyfile
include/: coolCalculator.h  greetings.h
lib/dynamiclib/: CMakeLists.txt
lib/dynamiclib/include/: shared.h
lib/dynamiclib/src/: shared.c
lib/staticlib/: CMakeLists.txt
lib/staticlib/include/: static.h
lib/staticlib/src/: static.c
scripts/: coverage.sh  docgen.sh  launcher.sh  tests.sh
sonarqube/: docker-compose.yml
src/: coolCalculator.c  greetings.c  main.c
tests/: CMakeLists.txt
tests/unit/: test_unit_program.c
